Add herbstluftwm config

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -176,8 +176,9 @@ ext cbz,  has zathura,      X, flag f = zathura -- "$@"
 
 ext png|jpg,    has gthumb,         X, flag f = gthumb "$@" &
 ext m, X, flag f = emacsclient -- "$@" &
+ext R, X, flag f = emacsclient -- "$@" &
 ext Rproj,    has rstudio-bin,         X, flag f = rstudio-bin -- "$@"
-ext tex,    has emacs,         X, flag f = emacs -- "$@" &
+ext tex,    has emacsclient,         X, flag f = emacsclient -- "$@" &
 
 ext csv,  has xdg-open,  X, flag f = konsole -e xdg-open -- "$@"
 
