Change some autostart programs and some polybar colours

--- a/.config/herbstluftwm/picom.conf
+++ b/.config/herbstluftwm/picom.conf
@@ -48,9 +48,9 @@ round-borders-exclude = [
 shadow = true;
 ##########################
 shadow-radius = 20;
-shadow-offset-x = -10;
+shadow-offset-x = -15;
 shadow-offset-y = -10;
-shadow-opacity = 0.8;
+shadow-opacity = 0.70;
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
 # shadow-radius = 7;
@@ -127,7 +127,7 @@ shadow-exclude = [
     "window_type *= 'normal' && ! name ~= ''", # disable shadow in conky
     # "_GTK_FRAME_EXTENTS@:c",
     # "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-    # "window_type = 'notification'",
+    "window_type = 'notification'",
     # "window_type *= 'menu'",
     # "window_type = 'utility'",
     # "window_type = 'dock'",
