--- a/.config/polybar/forest/bars.ini
+++ b/.config/polybar/forest/bars.ini
@@ -94,11 +94,11 @@ bar-volume-indicator-font = 2
 
 bar-volume-fill = ${bar.fill}
 bar-volume-fill-font = 2
-bar-volume-foreground-0 = ${color.green}
-bar-volume-foreground-1 = ${color.green}
+bar-volume-foreground-0 = ${color.amber}
+bar-volume-foreground-1 = ${color.amber}
 bar-volume-foreground-2 = ${color.amber}
 bar-volume-foreground-3 = ${color.amber}
-bar-volume-foreground-4 = ${color.red}
+bar-volume-foreground-4 = ${color.amber}
 
 bar-volume-empty = ${bar.empty}
 bar-volume-empty-font = 2
@@ -150,11 +150,11 @@ bar-indicator-font = 2
 
 bar-fill = ${bar.fill}
 bar-fill-font = 2
-bar-foreground-0 = ${color.green}
-bar-foreground-1 = ${color.green}
+bar-foreground-0 = ${color.amber}
+bar-foreground-1 = ${color.amber}
 bar-foreground-2 = ${color.amber}
 bar-foreground-3 = ${color.amber}
-bar-foreground-4 = ${color.red}
+bar-foreground-4 = ${color.amber}
 
 bar-empty = ${bar.empty}
 bar-empty-font = 2
