--- a/.config/polybar/forest/colors.ini
+++ b/.config/polybar/forest/colors.ini
@@ -29,7 +29,7 @@ lime = #B9C244
 yellow = #FDD835
 amber = #EBCB8B
 orange = #E57C46
-brown = #AC8476
+brown = #B5966D
 indigo = #6C77BB
 gray = #9E9E9E
 blue-gray = #6D8895
