--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -12,7 +12,7 @@
 [global/wm]
 ; Adjust the _NET_WM_STRUT_PARTIAL top value
 ; Used for top aligned bars
-margin-bottom = 8
+margin-bottom = 12
 
 ; Adjust the _NET_WM_STRUT_PARTIAL bottom value
 ; Used for bottom aligned bars
@@ -141,7 +141,7 @@ font-2 = "feather:size=12;3"
 
 modules-left = workspaces sep powermenu
 modules-center = polywins
-modules-right = cpu sep volume brightness sep battery sep date sep
+modules-right =  volume brightness sep temperature cpu sep battery sep date sep
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -177,7 +177,7 @@ tray-position = right
 tray-detached = false
 
 ; Tray icon max size
-tray-maxsize = 16
+tray-maxsize = 20
 
 ; Background color for the tray container 
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
