Add dual-monitor handling

--- a/.config/polybar/forest/config_HDMI.ini
+++ b/.config/polybar/forest/config_HDMI.ini
@@ -37,7 +37,7 @@ include-file = ~/.config/polybar/forest/user_modules.ini
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor =
+monitor = HDMI-1
 
 ; Use the specified monitor as a fallback if the main one is not found.
 monitor-fallback =
@@ -60,7 +60,7 @@ fixed-center = true
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
-width = 1904
+width = 98.5%
 height = 30
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
@@ -139,9 +139,9 @@ font-2 = "feather:size=12;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = workspaces sep powermenu
+modules-left = workspaces sep spotify 
 modules-center = polywins
-modules-right =  volume brightness sep temperature cpu sep battery sep date sep
+modules-right =  volume brightness sep temperature cpu sep battery sep date
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -170,7 +170,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = right
+tray-position = 
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
