--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -1019,7 +1019,7 @@ type = internal/xworkspaces
 ; on different bars
 ;
 ; Default: false
-pin-workspaces = true
+pin-workspaces = false
 
 ; Create click handler used to focus desktop
 ; Default: true
@@ -1094,6 +1094,13 @@ exec = /home/mattia/.dotfiles/.config/polybar/forest/polywins/polywins.sh 2>/dev
 format = <label>
 label = %output%
 label-padding = 1
+tail = true
+
+[module/herbstluftwm]
+type = custom/script
+
+exec-if = ps -C herbstluftwm >/dev/null 2>&1
+exec = MONITOR=HDMI-1 ~/.dotfiles/.config/herbstluftwm/tags.sh
 tail = true
 
 show="window_classname"
