--- a/.config/polybar/forest/bars.ini
+++ b/.config/polybar/forest/bars.ini
@@ -81,7 +81,7 @@ label-muted-foreground = ${color.sep}
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
-ramp-volume-foreground = ${color.teal}
+ramp-volume-foreground = ${color.orange}
 
 ; Only applies if <bar-volume> is used
 bar-volume-format = "%fill%%indicator%%empty%"
@@ -94,11 +94,11 @@ bar-volume-indicator-font = 2
 
 bar-volume-fill = ${bar.fill}
 bar-volume-fill-font = 2
-bar-volume-foreground-0 = ${color.amber}
-bar-volume-foreground-1 = ${color.amber}
-bar-volume-foreground-2 = ${color.amber}
-bar-volume-foreground-3 = ${color.amber}
-bar-volume-foreground-4 = ${color.amber}
+bar-volume-foreground-0 = ${color.teal}
+bar-volume-foreground-1 = ${color.teal}
+bar-volume-foreground-2 = ${color.teal}
+bar-volume-foreground-3 = ${color.teal}
+bar-volume-foreground-4 = ${color.red}
 
 bar-volume-empty = ${bar.empty}
 bar-volume-empty-font = 2
@@ -150,11 +150,11 @@ bar-indicator-font = 2
 
 bar-fill = ${bar.fill}
 bar-fill-font = 2
-bar-foreground-0 = ${color.amber}
-bar-foreground-1 = ${color.amber}
-bar-foreground-2 = ${color.amber}
-bar-foreground-3 = ${color.amber}
-bar-foreground-4 = ${color.amber}
+bar-foreground-0 = ${color.teal}
+bar-foreground-1 = ${color.teal}
+bar-foreground-2 = ${color.teal}
+bar-foreground-3 = ${color.teal}
+bar-foreground-4 = ${color.teal}
 
 bar-empty = ${bar.empty}
 bar-empty-font = 2
