--- a/.config/polybar/forest/user_modules.ini
+++ b/.config/polybar/forest/user_modules.ini
@@ -248,3 +248,16 @@ label-close-padding = 1
 ;label-separator = " | "
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/spotify]
+type = custom/script
+interval = 1
+format-prefix = " "
+format = <label>
+format-prefix-foreground = ${color.green}
+exec = python /home/mattia/.dotfiles/.config/polybar/forest/polybar-spotify/spotify_status.py -f '{artist}: {song}'
+format-underline = #1db954
+;control players (optional)
+click-left = playerctl --player=spotify play-pause 
+click-right = playerctl --player=spotify next 
+click-middle = playerctl --player=spotify previous 
