Add tmux config

--- a/.config/herbstluftwm/picom.conf
+++ b/.config/herbstluftwm/picom.conf
@@ -128,7 +128,7 @@ shadow-exclude = [
     "window_type *= 'normal' && ! name ~= ''", # disable shadow in conky
     # "_GTK_FRAME_EXTENTS@:c",
     # "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-    "window_type = 'notification'",
+    # "window_type = 'notification'",
     # "window_type *= 'menu'",
     # "window_type = 'utility'",
     # "window_type = 'dock'",
