--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -700,7 +700,7 @@ format-offline-prefix-foreground = ${color.red}
 ;   %date%
 ;   %title%
 ; Default: %artist% - %title%
-label-song =  " %title - %artist"
+label-song =  " %title% - %artist%"
 label-song-maxlen = 25
 label-song-ellipsis = true
 
