--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,6 +59,7 @@ bind y set synchronize-panes\; display 'synchronize-panes #{?synchronize-panes,o
 # General keybindings
 bind-key v split-window -h
 bind-key s split-window -v
+bind-key g set-option status
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -83,7 +84,7 @@ bind S choose-tree
 # THEME
 set -g status-justify 'centre'
 # set -g status-left-length '100'
-set -g status 'on'
+# set -g status 'on'
 # set -g pane-active-border-style bg=blue,fg='colour238'
 # set -g pane-border-style bg=black,fg='colour238'
 set -g status-right-length '100'
