--- a/.config/herbstluftwm/picom.conf
+++ b/.config/herbstluftwm/picom.conf
@@ -3,11 +3,11 @@
 #########
 # requires https://github.com/jonaburg/picom
 # (These are also the default values)
-transition-length = 180
-transition-pow-x = 0.3
-transition-pow-y = 0.3
-transition-pow-w = 0.3
-transition-pow-h = 0.3
+transition-length = 250
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
 size-transition = true
 
 # animations = true
@@ -51,14 +51,14 @@ round-borders-exclude = [
 
 ################################
 #             Shadows           #
-###########
+##########
 
 
 # Enabled client-side shadows on windows. Note desktop windows 
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
+# shadow = false;
 shadow = true;
 ##################
 shadow-radius = 16;
@@ -275,7 +275,7 @@ opacity-rule = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method = 
+# blur-method = "dual_kawase"
 # blur-size = 12
 #
 # blur-deviation = false
@@ -284,7 +284,7 @@ opacity-rule = [
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = true;
+blur-background = true;
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
