--- a/.config/openbox/picom.conf
+++ b/.config/openbox/picom.conf
@@ -27,6 +27,7 @@ rounded-corners-exclude = [
   "class_g = 'code-oss'",
   "class_g = 'Rofi'",
   "class_g = 'Dunst'",
+  "class_g = 'plasmashell'",
   #"class_g = 'TelegramDesktop'",
   # "class_g = 'firefox'",
   # "class_g = 'Thunderbird'"
