Add bspwm config

--- a/.config/herbstluftwm/picom.conf
+++ b/.config/herbstluftwm/picom.conf
@@ -3,26 +3,26 @@
 #########
 # requires https://github.com/jonaburg/picom
 # (These are also the default values)
-transition-length = 250
-transition-pow-x = 0.1
-transition-pow-y = 0.1
-transition-pow-w = 0.1
-transition-pow-h = 0.1
-size-transition = true
+# transition-length = 250
+# transition-pow-x = 0.1
+# transition-pow-y = 0.1
+# transition-pow-w = 0.1
+# transition-pow-h = 0.1
+# size-transition = true
 
-# animations = true
+animations = true
 # # `auto`, `none`, `fly-in`, `zoom`, `slide-down`, `slide-up`, `slide-left`, `slide-right` `slide-in`, `slide-out`
-# animation-for-transient-window = "auto"
-# animation-for-open-window = "auto"
-# animation-for-unmap-window = "auto"
-# animation-for-menu-window = "auto"
-# animation-for-workspace-switch-out = "auto"
-# animation-for-workspace-switch-in = "auto"
-# animation-stiffness = 100;
-# animation-dampening = 15;
-# animation-window-mass = 0.3;
-# animation-clamping = false;
-# animation-delta = 18;
+ animation-for-transient-window = "zoom"
+ animation-for-open-window = "zoom"
+ animation-for-unmap-window = "zoom"
+ animation-for-menu-window = "zoom"
+ animation-for-workspace-switch-out = "zoom"
+ animation-for-workspace-switch-in = "zoom"
+ animation-stiffness = 300;
+ animation-dampening = 15;
+ animation-window-mass = 0.3;
+ animation-clamping = false;
+ animation-delta = 18;
 #animation-force-steps = true;
 
 
