Refine bspwm and polybar config.

--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -382,7 +382,7 @@ time = %H:%M
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
-date-alt = It's %A, %d %B %Y
+date-alt = %A, %d %B %Y
 time-alt = %k:%M:%S
 
 ; Available tags:
@@ -550,9 +550,7 @@ label-unmounted = " %mountpoint%: NA"
 ;   %name%
 ;   %icon%
 ;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-focused = %index%
+;   %output% ; Default: %icon%  %name% ;;label-focused = %index%
 ;;label-focused-foreground = #ffffff
 ;;label-focused-background = #3f3f3f
 ;;label-focused-underline = #fba922
@@ -680,7 +678,7 @@ interval = 1
 ;   <icon-seekb>
 ;   <icon-seekf>
 format-online = <label-song> <icon-prev> <toggle> <icon-next>
-format-online-prefix = 
+; format-online-prefix = 
 format-online-prefix-foreground = ${color.green}
 
 ;format-playing = ${self.format-online}
@@ -690,7 +688,7 @@ format-online-prefix-foreground = ${color.green}
 ; Available tags:
 ;   <label-offline>
 format-offline = <label-offline>
-format-offline-prefix = 
+; format-offline-prefix = 
 format-offline-prefix-foreground = ${color.red}
 
 ; Available tokens:
@@ -717,9 +715,11 @@ label-time-padding = 1
 label-offline = " Offline"
 
 ; Only applies if <icon-X> is used
-icon-play = 
+; icon-play = 
+icon-play = 
 icon-play-foreground = ${color.cyan}
-icon-pause = 
+; icon-pause = 
+icon-pause = 
 icon-pause-foreground = ${color.cyan}
 icon-stop = 
 icon-stop-foreground = ${color.red}
@@ -1104,4 +1104,88 @@ exec = MONITOR=HDMI-1 ~/.dotfiles/.config/herbstluftwm/tags.sh
 tail = true
 
 show="window_classname"
+
+[module/bspwm]
+type = internal/bspwm
+
+pin-workspaces = true
+inline-mode = false
+
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
+
+fuzzy-match = true
+
+; ws-icon-[0-9]+ = label;icon
+; Note that the label needs to correspond with the bspwm workspace name
+;;ws-icon-0 = code;♚
+;;ws-icon-1 = office;♛
+;;ws-icon-2 = graphics;♜
+;;ws-icon-3 = mail;♝
+;;ws-icon-4 = web;♞
+;;ws-icon-default = ♟
+
+format = <label-state>
+
+label-monitor = %name%
+
+; If any values for label-dimmed-N are defined, the workspace/mode
+; colors will get overridden with those values if the monitor is out of focus
+; To only override workspaces in a specific state, use:
+;   label-dimmed-focused
+;   label-dimmed-occupied
+;   label-dimmed-urgent
+;   label-dimmed-empty
+;label-dimmed-foreground = ${color.FOREGROUND}
+;label-dimmed-underline = ${color.YELLOW}
+;label-dimmed-focused-background = ${color.BACKGROUND}
+
+label-focused = 
+label-focused-foreground = ${color.fore}
+label-focused-background = ${color.background}
+;label-focused-underline = ${color.RED}
+label-focused-padding = 1
+
+label-occupied = 
+label-occupied-foreground = ${color.foreground}
+label-occupied-background = ${color.background}
+;label-occupied-underline = ${color.GREEN}
+label-occupied-padding = 1
+
+label-urgent = 
+label-urgent-foreground = ${color.foreground}
+label-urgent-background = ${color.background}
+;label-urgent-underline = ${color.RED}
+label-urgent-padding = 1
+
+label-empty = 
+label-empty-foreground = ${color.foreground}
+label-empty-padding = 1
+
+; Separator in between workspaces
+label-separator = ""
+label-separator-padding = 0
+;label-separator-foreground = ${color.YELLOW}
+
+[module/mod]
+type = internal/bspwm
+
+format = <label-mode>
+format-background = ${color.background}
+format-foreground = ${color.foreground}
+format-padding = 1
+
+label-monocle = "Monocle"
+label-tiled = "Tiled"
+label-tall = "Tall"
+
+label-floating = ", Float"
+label-pseudotiled = ", Pseudo"
+label-fullscreen = ", Full"
+
+label-locked = " Locked"
+label-sticky = " Sticky"
+label-private = " Private"
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
