--- a/.config/polybar/forest/bars.ini
+++ b/.config/polybar/forest/bars.ini
@@ -8,9 +8,9 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [bar]
-fill = ⏽
-empty = ⏽
-indicator = 
+fill = 
+empty = 
+indicator = ⏽
 ; Nerd font :   ,  ⏽,  樂 籠 錄 , 雷 絛
 
 [module/volume]
