--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,15 +1,11 @@
 monitor=,preferred,auto,1
-workspace=eDP-1,1
-workspace=eDP-1,2
-workspace=eDP-1,3
-workspace=eDP-1,4
-workspace=eDP-1,5
+
 
 exec-once=$HOME/.config/hypr/autostart
 
 input {
-    kb_layout=
-    kb_variant=ffffff
+    kb_layout=it
+    kb_variant=us
     kb_model=
     kb_options=
     kb_rules=
@@ -22,18 +18,29 @@ input {
 }
 
 misc{
-    
+    workspace=HDMI-A-1,6
+    wsbind=1,eDP-1
+    wsbind=2,eDP-1
+    wsbind=3,eDP-1
+    wsbind=4,eDP-1
+    wsbind=5,eDP-1
+    wsbind=6,HDMI-A-1
+    wsbind=7,HDMI-A-1
+    wsbind=8,HDMI-A-1
+    wsbind=9,HDMI-A-1
+    wsbind=10,HDMI-A-1
 }
 
 general {
     sensitivity= 1.0 # for mouse cursor
     main_mod=SUPER
     
-    gaps_in=8
-    gaps_out=15
+    gaps_in=5
+    gaps_out=10
     border_size=1
-    col.active_border=0xfff5c2e7
-    col.inactive_border=0xff45475a
+    no_border_on_floating = false
+    col.active_border=0x00000000	
+    col.inactive_border=0x00000000
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
     damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
@@ -42,13 +49,15 @@ general {
 decoration {
     blur_new_optimizations = true
     drop_shadow = true
-    shadow_range=100
-    shadow_render_power=5
-    col.shadow= 0x33000000
-    col.shadow_inactive=0x22000000
-    rounding=3
-    blur=5
-    blur_size=7 # minimum 1
+    shadow_ignore_window = true
+    shadow_range=30
+    shadow_render_power=4
+    shadow_offset=3 3
+    col.shadow= 0x8c000000
+#    col.shadow_inactive=0x22000000
+    rounding=10
+    blur = true
+    blur_size=8 # minimum 1
     blur_passes=1 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
     # if you want heavy blur, you need to up the blur_passes.
@@ -70,8 +79,8 @@ animations {
 dwindle {
     pseudotile=1 # enable pseudotiling on dwindle
     force_split=2
-    col.group_border=0xff89dceb
-    col.group_border_active=0xfff9e2af
+    col.group_border=0x00000000
+    col.group_border_active=0x00000000
 }
 
 master{
@@ -105,23 +114,35 @@ bind=SUPER,RETURN,exec,kitty --title fly_is_kitty
 bind=ALT,RETURN,exec,kitty --single-instance
 bind=,Print,exec,~/.config/hypr/scripts/screenshot
 # bind=SUPER,RETURN,exec,alacritty
-bind=SUPER,Q,killactive,
+bind=ALT,Q,killactive,
 bind=SUPER,M,exit,
 bind=SUPER,E,exec,nautilus
 bind=SUPER,S,togglefloating,
 bind=SUPER,space,exec,wofi --show drun -o DP-3
 bind=SUPER,P,pseudo,
-bind=SUPER,L,exec,~/.config/hypr/scripts/lock
+bind=SUPER,X,exec,~/.config/hypr/scripts/lock
+bind=SUPER,F,fullscreen,
 
-bind=ALT,H,movewindow,l
-bind=ALT,L,movewindow,r
-bind=ALT,J,movewindow,d
-bind=ALT,K,movewindow,u
+bind=SUPER SHIFT,H,movewindow,l
+bind=SUPER SHIFT,L,movewindow,r
+bind=SUPER SHIFT,J,movewindow,d
+bind=SUPER SHIFT,K,movewindow,u
+bind=SUPER SHIFT,Left,movewindow,l
+bind=SUPER SHIFT,Right,movewindow,r
+bind=SUPER SHIFT,Down,movewindow,d
+bind=SUPER SHIFT,Up,movewindow,u
+
+bind=SHIFT ALT,h,movewindow,mon:0
+bind=SHIFT ALT,l,movewindow,mon:1
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
 bind=SUPER,down,movefocus,d
+bind=SUPER,H,movefocus,l
+bind=SUPER,L,movefocus,r
+bind=SUPER,K,movefocus,u
+bind=SUPER,J,movefocus,d
 
 # bind=CTRL,1,workspace,1
 # bind=CTRL,2,workspace,2
@@ -151,15 +172,30 @@ bind=ALT,8,movetoworkspace,8
 bind=ALT,9,movetoworkspace,9
 bind=ALT,0,movetoworkspace,10
 
-bind=SUPER,mouse_down,workspace,e+1
-bind=SUPER,mouse_up,workspace,e-1
+bind=CTRL ALT,L,workspace,e+1
+bind=CTRL ALT,H,workspace,e-1
+bind=CTRL ALT,Right,workspace,e+1
+bind=CTRL ALT,Left,workspace,e-1
 
 bind=SUPER,g,togglegroup
 bind=SUPER,tab,changegroupactive
-bind=SUPER,U,togglesplit
 
 # rec
 bind=CTRL,1,exec,kitty --title fly_is_kitty --hold cava
 bind=CTRL,2,exec,code-insiders
 bind=CTRL,3,exec,kitty --single-instance --hold donut.c
 bind=CTRL,4,exec,kitty --title clock_is_kitty --hold tty-clock -C5
+
+# FOCUS MONITORS
+bind=SUPERALT,h,focusmonitor,l
+bind=SUPERALT,l,focusmonitor,r
+
+# Volume
+bind=SUPER,+,exec,volume_up.sh
+bind=SUPER,-,exec,volume_down.sh
+bind=SUPER,XF86AudioMute,exec,volume_mute.sh
+
+# Window rules
+windowrule=opacity 1,kitty
+
+
