Install ranger in Vim

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -231,7 +231,7 @@ foreground       #c9c294
 
 # The background color
 # background       #1d2935
-background       #131d28
+background       #181c26
 
 # The opacity of the background. A number between 0 and 1, where 1 is opaque and 0 is fully transparent.
 # This will only work if supported by the OS (for instance, when using a compositor under X11). Note
