--- a/.config/hypr/component/waybar/config.jsonc
+++ b/.config/hypr/component/waybar/config.jsonc
@@ -108,7 +108,7 @@
     "temperature": {
         //"thermal-zone": 1,
         "interval": "4",
-        "hwmon-path": "/sys/class/hwmon/hwmon3/temp1_input",
+        "hwmon-path": "/sys/devices/platform/coretemp.0/hwmon/hwmon4/temp1_input",
         "critical-threshold": 74,
         "format-critical": "  {temperatureC}°C",
         "format": "{icon}  {temperatureC}°C",
