Add wayfire config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,6 +13,8 @@ input {
     kb_rules=
 
     follow_mouse=1
+    sensitivity=0.3
+    accel_profile=adaptive
 
     touchpad {
         natural_scroll=no
@@ -218,7 +220,7 @@ binde=,XF86MonBrightnessUp,exec,~/.local/bin/brightness.sh up
 binde=,XF86MonBrightnessDown,exec,~/.local/bin/brightness.sh down
 
 # Launchers
-bind=ALT,S,exec,grim -g "$(slurp)" - | wl-copy
-bind=SHIFTALT,S,exec,grim -g "$(slurp)"
+bind=ALT,S,exec,grim -g "$(slurp)" - | wl-copy # Take screenshot and store in clipboard
+bind=SHIFTALT,S,exec,grim -g "$(slurp)" # Take screenshot and store in ~/Pictures
 
 
