Tweak wayfire config

--- a/.config/wayfire_old.ini
+++ b/.config/wayfire_old.ini
@@ -12,36 +12,22 @@
 
 # Example configuration:
 #
-[input]
-xkb_layout = it
-mouse_accel_profile = none
-kb_numlock_default_state = true
-mouse_cursor_speed = -1
-cursor_theme = Nordzy-cursors
-cursor_size = 24
-xkb_variant = us
+# [input]
+# xkb_layout = us,fr
+# xkb_variant = dvorak,bepo
 #
 # See Input options for a complete reference.
 # https://github.com/WayfireWM/wayfire/wiki/Configuration#input
 
 # Output configuration ─────────────────────────────────────────────────────────
 
-
 # Example configuration:
 #
-[output:DP-3]
-mode = 3840x2160@60000
-position = 0,0
-transform = normal
-scale = 1.0000
-
-[output:DP-2]
-mode = 3840x2160@60000
-position = 3840,0
-transform = normal
-scale = 1.000
-
-
+# [output:eDP-1]
+# mode = 1920x1080@60000
+# position = 0,0
+# transform = normal
+# scale = 1.000000
 #
 # You can get the names of your outputs with wlr-randr.
 # https://github.com/emersion/wlr-randr
@@ -60,16 +46,15 @@ scale = 1.000
 # See the Configuration document for a complete list.
 plugins = \
   alpha \
-  blur \
   animate \
-  simple-tile \
   autostart \
   command \
   cube \
-  decoration \
+#  decoration \
   expo \
   fast-switcher \
   fisheye \
+  grid \
   idle \
   invert \
   move \
@@ -82,12 +67,8 @@ plugins = \
   wm-actions \
   wobbly \
   wrot \
-  preserve-output \
-  winshadows \
   zoom
 
-
-# simple-tile \
 # Note: [blur] is not enabled by default, because it can be resource-intensive.
 # Feel free to add it to the list if you want it.
 # You can find its documentation here:
@@ -105,13 +86,6 @@ preferred_decoration_mode = server
 
 # Mouse bindings ───────────────────────────────────────────────────────────────
 
-[decoration]
-title_height =  0
-active_color = 0.36862745 0.505882 0.67450 1
-inactive_color = 0.298039215 0.33725490196078434 0.41568627450980394 1
-ignore_views = title contains "Ulauncher"
-border_size = 1
-
 # Drag windows by holding down Super and left mouse button.
 [move]
 activate = <super> BTN_LEFT
@@ -128,22 +102,9 @@ modifier = <super>
 [alpha]
 modifier = <super> <alt>
 
-
-[simple-tile]
-button_move = <super> BTN_LEFT
-button_resize = <super> BTN_RIGHT
-key_toggle = <super> KEY_T
-key_focus_above = <super> KEY_K
-key_focus_below = <super> KEY_J
-key_focus_left = <super> KEY_H
-key_focus_right = <super> KEY_L
-outer_horiz_gap_size = 5
-outer_vert_gap_size = 5
-# tile_by_default = !title contains "Rofi"
-
 # Rotate windows with the mouse.
 [wrot]
-activate = <super> <ctrl> BTN_LEFT
+activate = <super> <ctrl> BTN_RIGHT
 
 # Fisheye effect.
 [fisheye]
@@ -155,17 +116,16 @@ toggle = <super> <ctrl> KEY_F
 
 # Automatically start background and panel.
 # Set to false if you want to override the default clients.
-autostart_wf_shell = false
+autostart_wf_shell = true
 
 # Set the wallpaper, start a panel and dock if you want one.
 # https://github.com/WayfireWM/wf-shell
 #
 # These are started by the autostart_wf_shell option above.
 #
-background = wf-background
+# background = wf-background
+# panel = wf-panel
 # dock = wf-dock
-panel = waybar
-
 
 # Output configuration
 # https://wayland.emersion.fr/kanshi/
@@ -177,12 +137,12 @@ notifications = mako
 
 # Screen color temperature
 # https://sr.ht/~kennylevinsen/wlsunset/
-#gamma = wlsunset
+gamma = wlsunset
 
 # Idle configuration
 # https://github.com/swaywm/swayidle
 # https://github.com/swaywm/swaylock
-idle = swayidle timeout 300 'swaylock --config /home/tom/.config/swaylock.conf'  before-sleep 'swaylock --config /home/tom/.config/swaylock.conf'
+idle = swayidle before-sleep swaylock
 
 # XDG desktop portal
 # Needed by some GTK applications
@@ -190,10 +150,10 @@ portal = /usr/libexec/xdg-desktop-portal
 
 # Example configuration:
 #
-#[idle]
-#toggle = <super> <shift> KEY_Z
-#screensaver_timeout = 300
-#dpms_timeout = 600
+# [idle]
+# toggle = <super> KEY_Z
+# screensaver_timeout = 300
+# dpms_timeout = 600
 #
 # Disables the compositor going idle with Super + z.
 # This will lock your screen after 300 seconds of inactivity, then turn off
@@ -204,21 +164,20 @@ portal = /usr/libexec/xdg-desktop-portal
 [command]
 
 # Start a terminal
-# https://github.com/alacritty/alacritty
 binding_terminal = <super> KEY_ENTER
 command_terminal = kitty
-
-## Toggle Waybar
-binding_waybar = <super> KEY_B
-command_waybar = killall -s USR1 waybar
 
 # Start your launcher
 # https://hg.sr.ht/~scoopta/wofi
 # Note: Add mode=run or mode=drun to ~/.config/wofi/config.
 # You can also specify the mode with --show option.
-binding_launcher = <shift> KEY_SPACE
-# command_launcher = /home/mattia/.config/rofi/launchers/type-1/launcher.sh
+binding_launcher = <super> <shift> KEY_ENTER
 command_launcher = wofi
+
+# Screen locker
+# https://github.com/swaywm/swaylock
+binding_lock = <super> <shift> KEY_ESC
+command_lock = swaylock
 
 # Logout
 # https://github.com/ArtsyMacaw/wlogout
@@ -228,10 +187,10 @@ command_logout = wlogout
 # Screenshots
 # https://wayland.emersion.fr/grim/
 # https://wayland.emersion.fr/slurp/
-binding_screenshot = KEY_SYSRQ
-command_screenshot = grim - | wl-copy
-binding_screenshot_interactive = <shift> KEY_SYSRQ
-command_screenshot_interactive = grim -g "$(slurp)" - | wl-copy
+binding_screenshot = KEY_PRINT
+command_screenshot = grim $(date '+%F_%T').webp
+binding_screenshot_interactive = <shift> KEY_PRINT
+command_screenshot_interactive = slurp | grim -g - $(date '+%F_%T').webp
 
 # Volume controls
 # https://alsa-project.org
@@ -249,31 +208,16 @@ command_light_up = light -A 5
 repeatable_binding_light_down = KEY_BRIGHTNESSDOWN
 command_light_down = light -U 5
 
-
-binding_sysmonitor = <ctrl> KEY_ESC
-command_sysmonitor = plasma-systemmonitor
-
-binding_firefox = <super> KEY_F
-command_firefox = firefox
-
-binding_dolphin = <super> KEY_D
-command_dolphin = dolphin
-
-
-binding_lock = <alt> KEY_X 
-command_lock = swaylock --config /home/tom/.config/swaylock.conf
-
 # Windows ──────────────────────────────────────────────────────────────────────
 
 # Actions related to window management functionalities.
 #
 # Example configuration:
 #
-[wm-actions]
-minimize = <super> KEY_M
-toggle_fullscreen = <alt> KEY_ENTER 
-toggle_always_on_top = <super> KEY_X
-#toggle_sticky = <super> <shift> KEY_X
+# [wm-actions]
+# toggle_fullscreen = <super> KEY_F
+# toggle_always_on_top = <super> KEY_X
+# toggle_sticky = <super> <shift> KEY_X
 
 # Position the windows in certain regions of the output.
 [grid]
@@ -282,7 +226,7 @@ toggle_always_on_top = <super> KEY_X
 # ← f →   │ 4 5 6
 # ⇱ ↓ ⇲ d │ 1 2 3 0
 # ‾   ‾
-slot_bl = <super> KEY_A
+slot_bl = <super> KEY_KP1
 slot_b = <super> KEY_KP2
 slot_br = <super> KEY_KP3
 slot_l = <super> KEY_LEFT | <super> KEY_KP4
@@ -311,45 +255,25 @@ binding_left = <ctrl> <super> KEY_LEFT
 binding_down = <ctrl> <super> KEY_DOWN
 binding_up = <ctrl> <super> KEY_UP
 binding_right = <ctrl> <super> KEY_RIGHT
-
+# Move the focused window with the same key-bindings, but add Shift.
 with_win_left = <ctrl> <super> <shift> KEY_LEFT
 with_win_down = <ctrl> <super> <shift> KEY_DOWN
 with_win_up = <ctrl> <super> <shift> KEY_UP
 with_win_right = <ctrl> <super> <shift> KEY_RIGHT
-send_win_1 = <super> <shift> KEY_1
-send_win_2 = <super> <shift> KEY_2
-send_win_3 = <super> <shift> KEY_3
-send_win_4 = <super> <shift> KEY_4
-send_win_5 = <super> <shift> KEY_5
-send_win_6 = <super> <shift> KEY_6
-send_win_7 = <super> <shift> KEY_7
-send_win_8 = <super> <shift> KEY_8
-send_win_9 = <super> <shift> KEY_9
-
-binding_1 = <super> KEY_1
-binding_2 = <super> KEY_2
-binding_3 = <super> KEY_3
-binding_4 = <super> KEY_4
-binding_5 = <super> KEY_5
-binding_6 = <super> KEY_6
-binding_7 = <super> KEY_7
-binding_8 = <super> KEY_8
-binding_9 = <super> KEY_9
-
 
 # Show the current workspace row as a cube.
 [cube]
 activate = <ctrl> <alt> BTN_LEFT
 # Switch to the next or previous workspace.
-rotate_left = <super> <ctrl> KEY_H
-rotate_right = <super> <ctrl> KEY_L
+#rotate_left = <super> <ctrl> KEY_H
+#rotate_right = <super> <ctrl> KEY_L
 
 # Show an overview of all workspaces.
 [expo]
-toggle = <super> 
+toggle = <super>
 # Select a workspace.
 # Workspaces are arranged into a grid of 3 × 3.
-# The numbering is left to right, line by line.abab
+# The numbering is left to right, line by line.
 #
 # ⇱ k ⇲
 # h ⏎ l
@@ -371,17 +295,23 @@ select_workspace_9 = KEY_9
 # Change focused output.
 [oswitch]
 # Switch to the next output.
-next_output = <super> KEY_LEFT
+next_output = <super> KEY_O
 # Same with the window.
-next_output_with_win = <super> KEY_RIGHT
+next_output_with_win = <super> <shift> KEY_O
 
 # Invert the colors of the whole output.
 [invert]
-toggle = <super> KEY_Is
+toggle = <super> KEY_I
 
 # Rules ────────────────────────────────────────────────────────────────────────
 
 # Example configuration:
 #
-[window-rules]
-rule_1 = on created if app_id is "waybar" then keepabove
+# [window-rules]
+# maximize_alacritty = on created if app_id is "Alacritty" then maximize
+#
+# You can get the properties of your applications with the following command:
+# $ WAYLAND_DEBUG=1 alacritty 2>&1 | kak
+#
+# See Window rules for a complete reference.
+# https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
