--- a/.config/hypr/hypr.conf
+++ b/.config/hypr/hypr.conf
@@ -1,97 +1,172 @@
-# Hypr example config file
-# 
-#
-# =)
+# monitor=,preferred,auto,1
+#monitor=eDP-1,1920x1080@59.96,0x0,1
+#monitor=HDMI-A-1,1920x1200@60,1920x0,1
+
+
+exec-once=$HOME/.config/hypr/autostart
+
+# kb_layout=it
+# kb_variant=us
+# kb_model=
+# kb_options=
+# kb_rules=
+
+# follow_mouse=1
+# sensitivity=0.3
+# accel_profile=adaptive
+
+# touchpad {
+#     natural_scroll=no
+# }
+
+# workspace=HDMI-1,6
+# wsbind=1,eDP-1
+# wsbind=2,eDP-1
+# wsbind=3,eDP-1
+# wsbind=4,eDP-1
+# wsbind=5,eDP-1
+# wsbind=6,HDMI-A-1
+# wsbind=7,HDMI-A-1
+# wsbind=8,HDMI-A-1
+# wsbind=9,HDMI-A-1
+# wsbind=10,HDMI-1
+
+# sensitivity= 1.0 # for mouse cursor
+main_mod=SUPER
 
 gaps_in=5
-border_size=1
-gaps_out=20
-rounding=0
-max_fps=60 # max fps for updates of config & animations
-focus_when_hover=1 # 0 - do not switch the focus when hover (only for tiling)
-main_mod=SUPER # For moving, resizing
-intelligent_transients=1 # keeps transients always on top.
-no_unmap_saving=1 # disables saving unmapped windows (seems to break sometimes)
-scratchpad_mon=0 # self-explanatory
+gaps_out=10
+border_size=0
+col.active_border=0x00000000	
+col.inactive_border=0x00000000
+# apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
-# Execs
-# exec-once=/home/me/MyEpicShellScript # will exec the script only when the WM launches
-# exec=/home/me/MyEpicShellScript # will exec the script every time the config is reloaded
+    # damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
 
-# Layout
-layout=0 # 0 - dwindle (default), 1 - master
-layout {
-    no_gaps_when_only=0 # disables gaps and borders when only window on screen
-}
-
-# Bar config
 Bar {
-    height=20
+    height=0
     monitor=0
-    enabled=1
-    mod_pad_in=8
-    no_tray_saving=1 # using this doesnt save the tray between reloads but fixes an issue with the bar disappearing.
-
-    font.main=Noto Sans
-    font.secondary=Noto Sans
-
-    col.bg=0xff111111
-    col.high=0xffff3333
-
-    module=left,X,0xff8000ff,0xffffffff,1,workspaces
-    module=pad,left,10
-    module=left,,0xff7000dd,0xff7000dd,1,tray
-    module=right,X,0xffffffff,0xff00ff33,1000,$date +%a,\ %b\ %Y\ \ %I:%M\ %p$
+    enabled=0
 }
+# decoration {
+#     blur_new_optimizations = true
+#     blur_ignore_opacity = true
+#     drop_shadow = true
+#     shadow_ignore_window = true
+#     shadow_range=30
+#     shadow_render_power=4
+#     shadow_offset=3 3
+#     col.shadow= 0x8c000000
+#     col.shadow_inactive=0x8c000000
+#     rounding=5
+#     blur = true
+#     blur_size=6 # minimum 1
+#     blur_passes=3 # minimum 1, more passes = more resource intensive.
+#     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
+#     # if you want heavy blur, you need to up the blur_passes.
+#     # the more passes, the more you can up the blur_size without noticing artifacts.
+# }
 
-# colors
-col.active_border=0x77ff3333
-col.inactive_border=0x77222222
 
-# status command
-# deprecated
-# status_command=date +%a,\ %b\ %Y\ \ %I:%M\ %p
-#
 
 # animations
 Animations {
     enabled=1
-    speed=5
+    speed=10
     cheap=1 # highly recommended
     borders=0
-    workspaces=0 # not really recommended
+    workspaces=1 # not really recommended
 }
 
-# example window rules, more in the wiki
+# dwindle {
+#     pseudotile=1 # enable pseudotiling on dwindle
+#     force_split=2
+#     col.group_border=0xff555555
+#     col.group_border_active=0xff888888
+# }
 
-# windowrule=float,class:krunner
-# windowrule=float,role:pop-up
-# windowrule=float,role:task_dialog
-# windowrule=monitor 0,class:krunner
-# windowrule=size 500 50,class:krunner
-# windowrule=move 700 500,class:krunner
-# windowrule=pseudo,class:discord
+master{
+    
+}
 
-# keybinds
-bind=SUPER,R,exec,dmenu_run
-bind=SUPER,Q,exec,kitty
-bind=SUPER,RETURN,exec,xterm
-bind=SUPER,G,exec,google-chrome-stable
+# gestures {
+#     workspace_swipe=yes
+#     workspace_swipe_fingers=4
+# }
 
-bind=SUPER,C,killactive,
+# Window rules
+# for windows named/classed as abc and xyz
+#windowrule=move 69 420,abc
+windowrule=move center,title:^(fly_is_kitty)$
+windowrule=size 800 500,title:^(fly_is_kitty)$
+# windowrule=animation slide,title:^(all_is_kitty)$
+windowrule=float,title:^(all_is_kitty)$
+#windowrule=tile,xy
+windowrule=tile,title:^(kitty)$
+#windowrule=float,title:^(fly_is_kitty)$ 
+windowrule=float,title:^(clock_is_kitty)$
+#windowrule=monitor 0,xyz
+windowrule=float,Rofi
+# windowrule=animation popin,Rofi
+windowrule=float,eww
+# windowrule=opacity 0.9 0.9, kitty
+# windowrule=opacity 0.91 0.91, Emacs
+# windowrule=opacity 0.9 0.9, code-oss
+# windowrule=opacity 0.9 0.9, thunar
+# windowrule=opacity 0.9 0.9, discord
+# windowrule=opacity .8 0.8, Rofi
+# windowrule=center,title:^(rofi -  Apps)$ 
+# windowrule=center,title:^(rofi -  )(.*)$ 
 
-bind=SUPER,LEFT,movewindow,l
-bind=SUPER,RIGHT,movewindow,r
-bind=SUPER,UP,movewindow,u
-bind=SUPER,DOWN,movewindow,d
+# example binds
+# bindm=SUPER,mouse:272,movewindow
+# bindm=SUPER,mouse:273,resizewindow
 
-bind=SUPER,LEFT,movefocus,l
-bind=SUPER,RIGHT,movefocus,r
-bind=SUPER,UP,movefocus,u
-bind=SUPER,DOWN,movefocus,d
-
+bind=SUPER,t,exec,kitty --start-as=fullscreen -o 'font_size=25' --title all_is_kitty
+bind=SUPER,RETURN,exec,kitty --title fly_is_kitty
+#bind=ALT,RETURN,exec,kitty --single-instance
+bind=,Print,exec,~/.config/hypr/scripts/screenshot
+# bind=SUPER,RETURN,exec,alacritty
+bind=ALT,Q,killactive,
+bind=SUPER,M,exit,
+bind=SUPER,E,exec,nautilus
+bind=SUPER,S,togglefloating,
+bind=SHIFT,space,exec,/home/mattia/.config/rofi/launchers/type-1/launcher.sh
+bind=SUPER,P,pseudo,
 bind=SUPER,F,fullscreen,
+bind=SUPER,B,exec,/home/mattia/.dotfiles/.config/hypr/scripts/launch_waybar
+# Rofi
+bind=ALT,X,exec,~/.config/hypr/scripts/lock
+bind=SUPER,X,exec,sh /home/mattia/.config/rofi.mattia/bin/menu_powermenu
+bind=ALT,tab,exec,rofi -theme "/home/mattia/.config/rofi_themes/rofi-breeze-theme/arc-dark.rasi" -show window -window-thumbnail -font 'hack 12' -icon-theme Flat-Remix-Teal-Dark -show-icons -no-default-config
 
+bind=SUPER SHIFT,H,movewindow,l
+bind=SUPER SHIFT,L,movewindow,r
+bind=SUPER SHIFT,J,movewindow,d
+bind=SUPER SHIFT,K,movewindow,u
+bind=SUPER SHIFT,Left,movewindow,l
+bind=SUPER SHIFT,Right,movewindow,r
+bind=SUPER SHIFT,Down,movewindow,d
+bind=SUPER SHIFT,Up,movewindow,u
+
+bind=SHIFT ALT,h,movewindow,mon:0
+bind=SHIFT ALT,l,movewindow,mon:1
+
+bind=SUPER,left,movefocus,l
+bind=SUPER,right,movefocus,r
+bind=SUPER,up,movefocus,u
+bind=SUPER,down,movefocus,d
+bind=SUPER,H,movefocus,l
+bind=SUPER,L,movefocus,r
+bind=SUPER,K,movefocus,u
+bind=SUPER,J,movefocus,d
+
+# bind=CTRL,1,workspace,1
+# bind=CTRL,2,workspace,2
+# bind=CTRL,3,workspace,3
+# bind=CTRL,4,workspace,4
+# bind=CTRL,5,workspace,5
+# bind=CTRL,6,workspace,6
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
@@ -101,21 +176,48 @@ bind=SUPER,6,workspace,6
 bind=SUPER,7,workspace,7
 bind=SUPER,8,workspace,8
 bind=SUPER,9,workspace,9
+bind=SUPER,0,workspace,10
 
-bind=SUPERSHIFT,1,movetoworkspace,1
-bind=SUPERSHIFT,2,movetoworkspace,2
-bind=SUPERSHIFT,3,movetoworkspace,3
-bind=SUPERSHIFT,4,movetoworkspace,4
-bind=SUPERSHIFT,5,movetoworkspace,5
-bind=SUPERSHIFT,6,movetoworkspace,6
-bind=SUPERSHIFT,7,movetoworkspace,7
-bind=SUPERSHIFT,8,movetoworkspace,8
-bind=SUPERSHIFT,9,movetoworkspace,9
+bind=ALT,1,movetoworkspace,1
+bind=ALT,2,movetoworkspace,2
+bind=ALT,3,movetoworkspace,3
+bind=ALT,4,movetoworkspace,4
+bind=ALT,5,movetoworkspace,5
+bind=ALT,6,movetoworkspace,6
+bind=ALT,7,movetoworkspace,7
+bind=ALT,8,movetoworkspace,8
+bind=ALT,9,movetoworkspace,9
+bind=ALT,0,movetoworkspace,10
+bind=ALT,b,movetoworkspace,special
 
-bind=SUPERSHIFT,S,movetoworkspace,scratchpad
-bind=SUPER,S,scratchpad,
+bind=CTRLALT,L,workspace,+1
+bind=CTRLALT,H,workspace,-1
+bind=CTRLALT,Right,workspace,+1
+bind=CTRLALT,Left,workspace,-1
+bind=CTRLALT,b,togglespecialworkspace
 
-bind=SUPER,SPACE,togglefloating,
+bind=SUPER,g,togglegroup
+bind=SUPER,tab,changegroupactive
 
-bind=SUPER,equal,splitratio,+
-bind=SUPER,minus,splitratio,-
+# rec
+bind=CTRL,1,exec,kitty --title fly_is_kitty --hold cava
+bind=CTRL,2,exec,code-insiders
+bind=CTRL,3,exec,kitty --single-instance --hold donut.c
+bind=CTRL,4,exec,kitty --title clock_is_kitty --hold tty-clock -C5
+
+# FOCUS MONITORS
+bind=SUPERALT,h,focusmonitor,l
+bind=SUPERALT,l,focusmonitor,r
+
+# Volume and brightness
+# binde=,XF86AudioRaiseVolume,exec,~/.local/bin/volume_up.sh
+# binde=,XF86AudioLowerVolume,exec,~/.local/bin/volume_down.sh
+# binde=,XF86AudioMute,exec,~/.local/bin/volume_mute.sh
+# binde=,XF86MonBrightnessUp,exec,~/.local/bin/brightness.sh up
+# binde=,XF86MonBrightnessDown,exec,~/.local/bin/brightness.sh down
+
+# Launchers
+bind=ALT,S,exec,grim -g "$(slurp)" - | wl-copy # Take screenshot and store in clipboard
+bind=SHIFTALT,S,exec,grim -g "$(slurp)" # Take screenshot and store in ~/Pictures
+
+
