--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -139,7 +139,7 @@ bind=SUPER,P,pseudo,
 bind=SUPER,F,fullscreen,
 bind=SUPER,B,exec,/home/mattia/.dotfiles/.config/hypr/scripts/launch_waybar
 # Rofi
-bind=ALT,X,exec,~/.config/hypr/scripts/lock
+bind=ALT,X,exec,gtklock
 bind=SUPER,X,exec,sh /home/mattia/.config/rofi.mattia/bin/menu_powermenu
 bind=ALT,tab,exec,rofi -theme "/home/mattia/.config/rofi_themes/rofi-breeze-theme/arc-dark.rasi" -show window -window-thumbnail -font 'hack 12' -icon-theme Flat-Remix-Teal-Dark -show-icons -no-default-config
 
