Add cava on waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -114,6 +114,11 @@ windowrule=animation slide,Rofi
 windowrule=dimaround,Rofi
 windowrule=center,Rofi
 windowrule=float,eww
+windowrule=float,org.gnome.Settings
+windowrule=float,pavucontrol
+windowrule=center,pavucontrol
+windowrule=size 500 650,org.gnome.Settings
+windowrule=move 73% 5%,org.gnome.Settings
 # windowrule=opacity 0.9 0.9, kitty
 # windowrule=opacity 0.91 0.91, Emacs
 # windowrule=opacity 0.9 0.9, code-oss
