--- a/.config/hypr/component/waybar/config.jsonc
+++ b/.config/hypr/component/waybar/config.jsonc
@@ -4,27 +4,15 @@
     "height": 30, // Waybar height (to be removed for auto height)
     "margin-bottom": 0,
     "margin-top": 0,
+    "margin-right": 0,
+    "margin-left": 0,
     // Archived modules
     // "custom/gpu", "bluetooth",  "custom/weather", "temperature", "sway/window"
     // Choose the order of the modules
-    "modules-left": [ "wlr/workspaces", "custom/pacman"],
+    "modules-left": [ "wlr/workspaces", "custom/pacman", "custom/cava-internal"],
     "modules-center": ["wlr/taskbar"],
     "modules-right": ["temperature", "battery", "pulseaudio", "backlight", "network","clock", "tray"],
     // Modules configuration
-    "sway/workspaces": {
-        "disable-scroll": true,
-        "all-outputs": true,
-        "format": "{icon}",
-        "format-icons": {
-            "1": "<span color=\"#D8DEE9\"></span>",
-            "2": "<span color=\"#88C0D0\"></span>",
-            "3": "<span color=\"#A3BE8C\"></span>",
-            "4": "<span color=\"#D8DEE9\"></span>",
-            "urgent": "",
-            "focused": "",
-            "default": ""
-        }
-    },
     "wlr/taskbar": {
 		"format": "{icon}",
 		"icon-size": 13,
@@ -34,6 +22,14 @@
 		"on-click-middle": "close",
 		"all-outputs": "false"
 	},
+
+    "custom/cava-internal": {
+        "exec": "sh ~/.config/hypr/component/waybar/custom_modules/Cava.sh",
+        "format": "{}",
+        "tooltip": false,
+        "on-click": "pavucontrol",
+        "layer": "below"
+    },
 
     "wlr/workspaces": {
         "format": "{icon}",
@@ -57,12 +53,12 @@
 						"critical": 15,
 					},
 				"format": "{icon} {capacity}%",
-				"format-warning": "{icon} {capacity}%",
-				"format-critical": "{icon} {capacity}%",
-				"format-charging": " {capacity}%",
-				"format-plugged": " {capacity}%",
-				"format-alt": "{icon} {time}",
-				"format-full": " {capacity}%",
+				"format-warning": "{icon}{capacity}%",
+				"format-critical": "{icon}{capacity}%",
+				"format-charging": "{capacity}%",
+				"format-plugged": "{capacity}%",
+				"format-alt": "{icon}{time}",
+				"format-full": "{capacity}%",
 					"format-icons": ["", "", "", "", ""],
 						"tooltip-format": "{time}"
 	},
@@ -94,7 +90,7 @@
         "spacing": 5
     },
     "clock": {
-        "format": "  {:%H:%M     %e %b}",
+        "format": " {:%H:%M   %e %b}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "today-format": "<b>{}</b>",
         "on-click": "gnome-calendar"
@@ -112,27 +108,27 @@
         "interval": "4",
         "hwmon-path": "/sys/devices/platform/coretemp.0/hwmon/hwmon4/temp1_input",
         "critical-threshold": 74,
-        "format-critical": "   {temperatureC}°C",
-        "format": "{icon} {temperatureC}°C",
+        "format-critical": "{temperatureC}°C",
+        "format": "{icon}{temperatureC}°C",
         "format-icons": ["", "", ""],
         "max-length": 7,
         "min-length": 7
     },
     "network": {
         // "interface": "wlan0", // (Optional) To force the use of this interface,
-        "format-wifi": "   {essid}",
-        "format-ethernet": "Connected  ",
+        "format-wifi": " {essid}",
+        "format-ethernet": " Eth",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "",
         "family": "ipv4",
-        "on-click": "/home/mattia/.dotfiles/.config/rofi/rofi-network-manager/rofi-network-manager.sh",
-        "tooltip-format-wifi": "   {ifname} @ {essid}\nIP: {ipaddr}\nStrength: {signalStrength}%\nFreq: {frequency}MHz\n {bandwidthUpBits}  {bandwidthDownBits}",
+        "on-click": "gnome-control-center",
+        "tooltip-format-wifi": " {ifname} @ {essid}\nIP: {ipaddr}\nStrength: {signalStrength}%\nFreq: {frequency}MHz\n {bandwidthUpBits}  {bandwidthDownBits}",
         "tooltip-format-ethernet": " {ifname}\nIP: {ipaddr}\n {bandwidthUpBits}  {bandwidthDownBits}"
     },
     "pulseaudio": {
         "scroll-step": 3, // %, can be a float
-        "format": "{icon}  {volume}%",
-        "format-bluetooth": "{volume}% {icon} ",
+        "format": "{icon} {volume}%",
+        "format-bluetooth": "{icon}{volume}% ",
         "format-bluetooth-muted": " {icon} ",
         //"format-source": "{volume}% ",
         //"format-source-muted": "",
@@ -152,7 +148,7 @@
         "on-click-right": "pactl set-source-mute @DEFAULT_SOURCE@ toggle"
     },
     "custom/pacman": {
-        "format": "<big>    Updates:</big>  {}",
+        "format": "<big> Updates:</big> {}",
         "interval": 3600,                     // every hour
         "exec": "checkupdates | wc -l",       // # of updates
         "exec-if": "exit 0",                  // always run; consider advanced run conditions
