Add tmux config.

--- a/.config/hypr/hypr.conf
+++ b/.config/hypr/hypr.conf
@@ -122,8 +122,8 @@ windowrule=float,eww
 # bindm=SUPER,mouse:272,movewindow
 # bindm=SUPER,mouse:273,resizewindow
 
-bind=SUPER,t,exec,kitty --start-as=fullscreen -o 'font_size=25' --title all_is_kitty
-bind=SUPER,RETURN,exec,kitty --title fly_is_kitty
+bind=SUPER,t,exec,kitty -c ~/.config/kitty/kitty_nvim.conf --start-as=fullscreen --title nvim -e tmux
+bind=SUPER,RETURN,exec,kitty --title kitty
 #bind=ALT,RETURN,exec,kitty --single-instance
 bind=,Print,exec,~/.config/hypr/scripts/screenshot
 # bind=SUPER,RETURN,exec,alacritty
