--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ misc{
     wsbind=7,eDP-1
     wsbind=8,eDP-1
     wsbind=9,eDP-1
-    wsbind=11,HDMI-A-1
+    wsbind=10,HDMI-A-1
     wsbind=12,HDMI-A-1
     wsbind=13,HDMI-A-1
     wsbind=14,HDMI-A-1
@@ -141,7 +141,7 @@ windowrule=center,title:^(rofi -  )(.*)$
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
-bind=SUPER,t,exec,kitty --start-as=fullscreen -o 'font_size=25' --title all_is_kitty
+bind=SUPER,n,exec,kitty -c ~/.config/kitty/kitty_nvim.conf --start-as=fullscreen --title nvim -e tmux 
 bind=SUPER,RETURN,exec,kitty --title fly_is_kitty
 #bind=ALT,RETURN,exec,kitty --single-instance
 bind=,Print,exec,~/.config/hypr/scripts/screenshot
@@ -214,6 +214,7 @@ bind=ALT,9,exec,hyprsome move 9
 # Special workspaces
 bind=ALT,b,movetoworkspace,special:btop
 bind=ALT,m,movetoworkspace,special:music
+bind=ALT,h,movetoworkspace,special:hide
 
 bind=CTRLALT,L,workspace,+1
 bind=CTRLALT,H,workspace,-1
@@ -221,6 +222,7 @@ bind=CTRLALT,Right,workspace,+1
 bind=CTRLALT,Left,workspace,-1
 bind=CTRLALT,b,togglespecialworkspace,btop
 bind=CTRLALT,m,togglespecialworkspace,music
+bind=SUPERCTRL,h,togglespecialworkspace,hide
 
 bind=SUPERSHIFT,s,workspaceopt,allfloat
 
