--- a/.config/kitty/kitty_nvim.conf
+++ b/.config/kitty/kitty_nvim.conf
@@ -188,13 +188,13 @@ enabled_layouts *
 
 # The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
 # Note that borders are displayed only when more than one window is visible. They are meant to separate multiple windows.
-window_border_width 1
+window_border_width 0
 
 # The window margin (in pts) (blank area outside the border)
 window_margin_width 0
 
 # The window padding (in pts) (blank area between the text and the window border)
-window_padding_width 13
+window_padding_width 0
 
 # The color for the border of the active window
 active_border_color #00ff00
@@ -475,7 +475,7 @@ map kitty_mod+p>w       run_kitten text hints --type word --program -
 map kitty_mod+f11      toggle_fullscreen
 map kitty_mod+u        input_unicode_character
 map kitty_mod+f2       edit_config_file
-  You can customize how the URLs are
+# You can customize how the URLs are
 # Open the kitty shell in a new window/tab/overlay/os_window to control kitty using commands.
 map kitty_mod+escape   kitty_shell window
 
