--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -139,7 +139,7 @@ windowrule=float,Rofi
 windowrule=animation slide,Rofi
 windowrule=dimaround,title:^(rofi -  Apps)$
 windowrule=center,Rofi
-windowrule=opacity 0.5 0.5, Rofi
+windowrule=opacity 0.1 0.1 0.1,rofi
 windowrule=float,eww
 windowrule=float,kdesystemsettings
 windowrule=float,pavucontrol
@@ -155,6 +155,11 @@ windowrule=opacity 0.9 0.9, discord
 windowrule=opacity 0.5 0.5, dunst
 windowrule=center,title:^(rofi -  Apps)$ 
 windowrule=center,title:^(rofi -  )(.*)$ 
+windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
 # Window resize
 bindm=SUPER,mouse:272,movewindow
@@ -191,7 +196,8 @@ bind=SUPER,B,exec,/home/mattia/.dotfiles/.config/hypr/scripts/launch_waybar
 # bind=ALT,X,exec,gtklock -s ~/.config/gtklock/style.css
 bind=ALT,X,exec,hyprlock
 # bind=SUPER,X,exec,sh /home/mattia/.config/rofi.mattia/bin/menu_powermenu
-bind=SUPER,X,exec,sh /home/mattia/.config/rofi/powermenu/type-3/powermenu.sh
+# bind=SUPER,X,exec,sh /home/mattia/.config/rofi/powermenu/type-3/powermenu.sh
+bind=SUPER,X,exec,wlogout
 # bind=ALT,tab,exec,rofi -theme "/home/mattia/.config/rofi_themes/rofi-breeze-theme/arc-dark.rasi" -show window -window-thumbnail -font 'hack 12' -icon-theme Flat-Remix-Teal-Dark -show-icons -no-default-config
 
 bind=SUPER SHIFT,H,movewindow,l
