improve zsh bindings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -164,8 +164,8 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 # Window resize
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
-binde=ALT,L,resizeactive,10 -10
-binde=ALT,H,resizeactive,-10 10
+binde=SUPER ALT,L,resizeactive,10 -10
+binde=SUPER ALT,H,resizeactive,-10 10
 
 # Application shortcuts
 bind=SUPER,n,exec,kitty -c ~/.config/kitty/kitty_nvim.conf --start-as=fullscreen --title nvim -e tmux 
