--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,8 @@
+set -g allow-passthrough on
+
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 # # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
