--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -26,6 +26,9 @@ set-option -g renumber-windows on
 
 # set vim mode
 bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind h select-pane -L
 set-window-option -g mode-keys vi
 # keybindings
 # bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -39,7 +42,7 @@ bind h split-window -v -l 15 -c "#{pane_current_path}"
 bind v split-window -h -l 50 -c "#{pane_current_path}"
 
 # Sessions
-bind k kill-session -a
+bind K kill-session -a
 bind S choose-tree -Zs
 
 # Toggle status bar
@@ -67,11 +70,28 @@ set -g @plugin 'rose-pine/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'aserowy/tmux.nvim'
 
 set -g @continuum-restore 'on'
 
+# navigation
+set -g @tmux-nvim-navigation true
+set -g @tmux-nvim-navigation-cycle true
+set -g @tmux-nvim-navigation-keybinding-left 'C-h'
+set -g @tmux-nvim-navigation-keybinding-down 'C-j'
+set -g @tmux-nvim-navigation-keybinding-up 'C-k'
+set -g @tmux-nvim-navigation-keybinding-right 'C-l'
+
+# resize
+set -g @tmux-nvim-resize true
+set -g @tmux-nvim-resize-step-x 1
+set -g @tmux-nvim-resize-step-y 1
+set -g @tmux-nvim-resize-keybinding-left 'M-h'
+set -g @tmux-nvim-resize-keybinding-down 'M-j'
+set -g @tmux-nvim-resize-keybinding-up 'M-k'
+set -g @tmux-nvim-resize-keybinding-right 'M-l'
+
 # Theme settings
-# set -g @catppuccin_flavour 'mocha'
 set -g @tokyo-night-tmux_show_datetime 1
 set -g @tokyo-night-tmux_time_format 24H
 set -g @tokyo-night-tmux_show_path 1
