--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ misc {
     workspace=7,eDP-1
     workspace=8,eDP-1
     workspace=9,eDP-1
-    workspace=10,HDMI-A-1
+    workspace=11,HDMI-A-1
     workspace=12,HDMI-A-1
     workspace=13,HDMI-A-1
     workspace=14,HDMI-A-1
@@ -108,6 +108,7 @@ animations {
 
 master {
     mfact=0.65    
+    new_status=master
 }
 
 dwindle {
@@ -134,8 +135,8 @@ windowrule=tile,title:^(kitty)$
 windowrule=float,title:^(clock_is_kitty)$
 #windowrule=monitor 0,xyz
 windowrule=float,Rofi
-windowrule=animation slide,Rofi
-windowrule=dimaround,title:^(rofi -  Apps)$
+windowrule=animation slide,Rofi - rofi
+windowrulev2=dimaround,title:^(Rofi - rofi)$
 windowrule=center,Rofi
 windowrule=opacity 0.1 0.1 0.1,rofi
 windowrule=float,eww
@@ -166,7 +167,7 @@ binde=SUPER ALT,L,resizeactive,10 -10
 binde=SUPER ALT,H,resizeactive,-10 10
 
 # Application shortcuts
-bind=SUPER,n,exec,kitty -c ~/.config/kitty/kitty_nvim.conf --start-as=fullscreen --title nvim -e tmux 
+bind=SUPER,n,exec,kitty -c ~/.config/kitty/kitty_nvim.conf --title nvim -e tmux 
 bind=SUPER,t,exec,kitty -c ~/.config/kitty/kitty_nvim.conf
 bind=SUPER,RETURN,exec,kitty --title kitty
 #bind=ALT,RETURN,exec,kitty --single-instance
@@ -174,7 +175,8 @@ bind=,Print,exec,~/.config/hypr/scripts/screenshot
 # bind=SUPER,RETURN,exec,alacritty
 bind=SUPER,v,exec,vivaldi-stable
 bind=SUPER,E,exec,thunar
-bind=SHIFT,space,exec,/home/mattia/.config/rofi/launchers/type-1/launcher.sh
+# bind=SHIFT,space,exec,/home/mattia/.config/rofi/launchers/type-1/launcher.sh
+bind=SHIFT,space,exec,/home/mattia/.config/rofi/catppuccin/deathemonic/bin/launcher 
 bind=ALT,a,exec,pulseaudio -k
 bind = SUPER, C, exec, nwg-clipman
 
@@ -302,8 +304,81 @@ binde=,XF86AudioMute,exec,~/.local/bin/volume_mute.sh
 binde=,XF86MonBrightnessUp,exec,~/.local/bin/brightness.sh up
 binde=,XF86MonBrightnessDown,exec,~/.local/bin/brightness.sh down
 
-# Launchers
+# Screenshot
 bind=ALT,S,exec,grim -g "$(slurp)" - | wl-copy # Take screenshot and store in clipboard
 bind=SHIFTALT,S,exec,grim -g "$(slurp)" # Take screenshot and store in ~/Pictures
 
 # --- Plugins --- #
+# exec-once = hyprpm reload -n
+
+bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = true # laptop touchpad
+        gesture_fingers = 3  # 3 or 4
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = true # positive = swipe down. Negative = swipe up.
+    }
+}
+
+# # bind key to toggle overview (normal)
+# bind = ALT,tab,hycov:toggleoverview
+#
+# # bind key to toggle overview (force mode, not affected by `only_active_workspace` or `only_active_monitor`)
+# # bind = ALT,grave,hycov:toggleoverview,forceall #grave key is the '~' key
+#
+# # bind key to toggle overview (force mode, not affected by `only_active_workspace` or `only_active_monitor`)
+# bind = ALT,grave,hycov:toggleoverview,onlycurrentworkspace
+#
+# # bind key to toggle overview (shows all windows in one monitor, not affected by `only_active_workspace` or `only_active_monitor`)
+# bind = ALT,g,hycov:toggleoverview,forceallinone 
+#
+# # The key binding for directional switch mode.
+# # Calculate the window closest to the direction to switch focus.
+# # This keybind is applicable not only to the overview, but also to the general layout.
+# bind=ALT,left,hycov:movefocus,l
+# bind=ALT,right,hycov:movefocus,r
+# bind=ALT,up,hycov:movefocus,u
+# bind=ALT,down,hycov:movefocus,d
+# bind=ALT,h,hycov:movefocus,l
+# bind=ALT,l,hycov:movefocus,r
+# bind=ALT,k,hycov:movefocus,u
+# bind=ALT,j,hycov:movefocus,d
+
+# if you want that focusmove can cross monitor, use this
+# bind=ALT,left,hycov:movefocus,leftcross
+# bind=ALT,right,hycov:movefocus,rightcross
+# bind=ALT,up,hycov:movefocus,upcross
+# bind=ALT,down,hycov:movefocus,downcross
+
+plugin {
+    hycov {
+        overview_gappo = 60 # gaps width from screen edge
+        overview_gappi = 24 # gaps width from clients
+        enable_hotarea = 1 # enable mouse cursor hotarea, when cursor enter hotarea, it will toggle overview    
+        enable_click_action = 1 # enable mouse left button jump and right button kill in overview mode
+        hotarea_monitor = all # monitor name which hotarea is in, default is all
+        hotarea_pos = 1 # position of hotarea (1: bottom left, 2: bottom right, 3: top left, 4: top right)
+        hotarea_size = 10 # hotarea size, 10x10
+        swipe_fingers = 4 # finger number of gesture,move any directory
+        move_focus_distance = 100 # distance for movefocus,only can use 3 finger to move 
+        enable_gesture = 0 # enable gesture
+        auto_exit = 1 # enable auto exit when no client in overview
+        auto_fullscreen = 0 # auto make active window maximize after exit overview
+        only_active_workspace = 0 # only overview the active workspace
+        only_active_monitor = 0 # only overview the active monitor
+        enable_alt_release_exit = 0 # alt swith mode arg,see readme for detail
+        alt_replace_key = Alt_L # alt swith mode arg,see readme for detail
+        alt_toggle_auto_next = 0 # auto focus next window when toggle overview in alt swith mode
+        click_in_cursor = 1 # when click to jump,the target windwo is find by cursor, not the current foucus window.
+        hight_of_titlebar = 0 # height deviation of title bar height
+        show_special = 0 # show windwos in special workspace in overview.
+        raise_float_to_top = 1 # raise the window that is floating before to top after leave overview mode
+    }
+}
