--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -29,6 +29,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind h select-pane -L
+bind M-j select-pane -D
+bind M-k select-pane -U
+bind M-l select-pane -R
+bind M-h select-pane -L
 set-window-option -g mode-keys vi
 # keybindings
 # bind-key -T copy-mode-vi v send-keys -X begin-selection
