--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -194,7 +194,7 @@ window_border_width 1
 window_margin_width 0
 
 # The window padding (in pts) (blank area between the text and the window border)
-window_padding_width 13
+window_padding_width 10
 
 # The color for the border of the active window
 active_border_color #00ff00
@@ -257,8 +257,8 @@ selection_background #FFFACD
 # as color16 to color256.
 
 # black
-color0   #181825
-color8   #313244
+color0   #45475a
+color8   #585b70
 # color0   #233347
 # color8   #666666
 
