--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 monitor=,preferred,auto,1
-#monitor=eDP-1,1920x1080@59.96,0x0,1
 #monitor=HDMI-A-1,1920x1200@60,1920x0,1
+#monitor=eDP-1,1920x1080@59.96,0x0,1
 
 
 # --- Autostart --- #
@@ -18,37 +18,41 @@ input {
     sensitivity=0.3
     accel_profile=adaptive
 
+    scroll_method = on_button_down
+    scroll_button = 274
+    scroll_factor = 1.0
+
     touchpad {
         natural_scroll=no
     }
 }
 
 misc {
-    workspace=HDMI-A-1,11
-    workspace=1,eDP-1
-    workspace=2,eDP-1
-    workspace=3,eDP-1
-    workspace=4,eDP-1
-    workspace=5,eDP-1
-    workspace=6,eDP-1
-    workspace=7,eDP-1
-    workspace=8,eDP-1
-    workspace=9,eDP-1
-    workspace=11,HDMI-A-1
-    workspace=12,HDMI-A-1
-    workspace=13,HDMI-A-1
-    workspace=14,HDMI-A-1
-    workspace=15,HDMI-A-1
-    workspace=16,HDMI-A-1
-    workspace=17,HDMI-A-1
-    workspace=18,HDMI-A-1
-    workspace=19,HDMI-A-1
+    # workspace=HDMI-A-1,11
+    # workspace=1,eDP-1
+    # workspace=2,eDP-1
+    # workspace=3,eDP-1
+    # workspace=4,eDP-1
+    # workspace=5,eDP-1
+    # workspace=6,eDP-1
+    # workspace=7,eDP-1
+    # workspace=8,eDP-1
+    # workspace=9,eDP-1
+    # workspace=11,HDMI-A-1
+    # workspace=12,HDMI-A-1
+    # workspace=13,HDMI-A-1
+    # workspace=14,HDMI-A-1
+    # workspace=15,HDMI-A-1
+    # workspace=16,HDMI-A-1
+    # workspace=17,HDMI-A-1
+    # workspace=18,HDMI-A-1
+    # workspace=19,HDMI-A-1
 
     force_default_wallpaper=0
 }
 
 general {
-    sensitivity= 1.0 # for mouse cursor
+    layout=master
     # main_mod=SUPER
     
     gaps_in=5
@@ -57,7 +61,6 @@ general {
     no_border_on_floating = false
     col.active_border=0x00000000	
     col.inactive_border=0x00000000
-    apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
     # damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
 }
@@ -80,7 +83,7 @@ decoration {
     # blur_ignore_opacity = true
     drop_shadow = true
     shadow_ignore_window = true
-    shadow_range=20
+    shadow_range=25
     shadow_render_power=4
     shadow_offset=3 3
     col.shadow= 0x8c000000
@@ -108,7 +111,8 @@ animations {
 
 master {
     mfact=0.65    
-    new_status=master
+    new_status=inherit
+    new_on_top=true
 }
 
 dwindle {
@@ -159,6 +163,8 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+windowrulev2 = float,class:^(com.github.Aylur.ags)$
+windowrulev2 = float,class:^(blueberry.py)$
 
 # Window resize
 bindm=SUPER,mouse:272,movewindow
@@ -169,7 +175,8 @@ binde=SUPER ALT,H,resizeactive,-10 10
 # Application shortcuts
 bind=SUPER,n,exec,kitty -c ~/.config/kitty/kitty_nvim.conf --title nvim -e tmux 
 bind=SUPER,t,exec,kitty -c ~/.config/kitty/kitty_nvim.conf
-bind=SUPER,RETURN,exec,kitty --title kitty
+# bind=SUPER,RETURN,exec,kitty --title kitty
+bind=SUPER,RETURN,exec,wezterm
 #bind=ALT,RETURN,exec,kitty --single-instance
 bind=,Print,exec,~/.config/hypr/scripts/screenshot
 # bind=SUPER,RETURN,exec,alacritty
@@ -193,6 +200,10 @@ bind=ALT,F,fullscreen,1
 bind=SUPERSHIFT,B,exec,pkill -SIGUSR1 waybar # Toggle waybar visibility
 bind=SUPER,W,exec,pkill -SIGUSR2 waybar # Reload waybar
 bind=SUPER,B,exec,/home/mattia/.dotfiles/.config/hypr/scripts/launch_waybar
+
+# HyprPanel
+bind=SUPERSHIFT,P,exec,pkill ags && ags &
+bind=SUPER,P,exec, ags &
 
 # Rofi
 # bind=ALT,X,exec,gtklock -s ~/.config/gtklock/style.css
@@ -230,25 +241,25 @@ bind=SUPER,J,movefocus,d
 # bind=CTRL,4,workspace,4
 # bind=CTRL,5,workspace,5
 # bind=CTRL,6,workspace,6
-bind=SUPER,1,exec,hyprsome workspace 1
-bind=SUPER,2,exec,hyprsome workspace 2
-bind=SUPER,3,exec,hyprsome workspace 3
-bind=SUPER,4,exec,hyprsome workspace 4
-bind=SUPER,5,exec,hyprsome workspace 5
-bind=SUPER,6,exec,hyprsome workspace 6
-bind=SUPER,7,exec,hyprsome workspace 7
-bind=SUPER,8,exec,hyprsome workspace 8
-bind=SUPER,9,exec,hyprsome workspace 9
-
-bind=ALT,1,exec,hyprsome move 1
-bind=ALT,2,exec,hyprsome move 2
-bind=ALT,3,exec,hyprsome move 3
-bind=ALT,4,exec,hyprsome move 4
-bind=ALT,5,exec,hyprsome move 5
-bind=ALT,6,exec,hyprsome move 6
-bind=ALT,7,exec,hyprsome move 7
-bind=ALT,8,exec,hyprsome move 8
-bind=ALT,9,exec,hyprsome move 9
+# bind=SUPER,1,exec,hyprsome workspace 1
+# bind=SUPER,2,exec,hyprsome workspace 2
+# bind=SUPER,3,exec,hyprsome workspace 3
+# bind=SUPER,4,exec,hyprsome workspace 4
+# bind=SUPER,5,exec,hyprsome workspace 5
+# bind=SUPER,6,exec,hyprsome workspace 6
+# bind=SUPER,7,exec,hyprsome workspace 7
+# bind=SUPER,8,exec,hyprsome workspace 8
+# bind=SUPER,9,exec,hyprsome workspace 9
+#
+# bind=ALT,1,exec,hyprsome move 1
+# bind=ALT,2,exec,hyprsome move 2
+# bind=ALT,3,exec,hyprsome move 3
+# bind=ALT,4,exec,hyprsome move 4
+# bind=ALT,5,exec,hyprsome move 5
+# bind=ALT,6,exec,hyprsome move 6
+# bind=ALT,7,exec,hyprsome move 7
+# bind=ALT,8,exec,hyprsome move 8
+# bind=ALT,9,exec,hyprsome move 9
 
 # Special workspaces
 bind=ALT,b,movetoworkspace,special:btop
@@ -312,6 +323,7 @@ bind=SHIFTALT,S,exec,grim -g "$(slurp)" # Take screenshot and store in ~/Picture
 # exec-once = hyprpm reload -n
 
 bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+bind = ALT, grave, overview:toggle
 
 plugin {
     hyprexpo {
@@ -382,3 +394,27 @@ plugin {
         raise_float_to_top = 1 # raise the window that is floating before to top after leave overview mode
     }
 }
+
+plugin {
+    split-monitor-workspaces {
+        count = 5
+        keep_focused = 0
+        enable_notifications = 0
+        enable_persistent_workspaces = 1
+    }
+}
+
+$mainMod = SUPER
+# Switch workspaces with mainMod + [0-5]
+bind = $mainMod, 1, split-workspace, 1
+bind = $mainMod, 2, split-workspace, 2
+bind = $mainMod, 3, split-workspace, 3
+bind = $mainMod, 4, split-workspace, 4
+bind = $mainMod, 5, split-workspace, 5
+# Move active window to a workspace with ALT + [0-5]
+bind = ALT, 1, split-movetoworkspacesilent, 1
+bind = ALT, 2, split-movetoworkspacesilent, 2
+bind = ALT, 3, split-movetoworkspacesilent, 3
+bind = ALT, 4, split-movetoworkspacesilent, 4
+bind = ALT, 5, split-movetoworkspacesilent, 5
+
