update hyprland config and other

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -205,8 +205,8 @@ bind=SUPER,W,exec,pkill -SIGUSR2 waybar # Reload waybar
 bind=SUPER,B,exec,/home/mattia/.dotfiles/.config/hypr/scripts/launch_waybar
 
 # HyprPanel
-bind=SUPERSHIFT,P,exec,pkill ags && ags &
-bind=SUPER,P,exec, ags &
+bind=SUPERSHIFT,P,exec,pkill ags && agsv1 &
+bind=SUPER,P,exec, agsv1 &
 
 # Rofi
 # bind=ALT,X,exec,gtklock -s ~/.config/gtklock/style.css
