--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@
 # The default values shown below rely on your OS to choose an appropriate monospace font family.
 # font_family      DejaVu Sans Mono for Powerline
 # font_family      FuraCode Nerd Font Mono 
-font_family	     FiraCode Nerd Font Light 
+font_family	     SpaceMono Nerd Font
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
